api: Promote getting webhook formats to /as level
